--- a/koleksi.html
+++ b/koleksi.html
@@ -3,22 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Koleksi Buku - Perpustakaan Aura</title>
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/5.3.3/css/bootstrap.min.css" rel="stylesheet">
-     <link rel="stylesheet" href="style.css">
+    <title>Hubungi Kami</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<header class="text-center py-3">
-    <h1>PERPUSTAKAAN AURA</h1>
-<nav class="navbar">
-    <div class="container d-flex justify-content-center">
-        <a href="index.html" class="btn btn-custom mx-2">Beranda</a>
-        <a href="Tentang-saya.html" class="btn btn-custom mx-2">Tentang Saya</a>
-        <a href="Hubungi-kami.html" class="btn btn-custom mx-2">Hubungi Kami</a>
-        <a href="koleksi.html" class="btn btn-custom mx-2">Koleksi</a>
-    </div>
-</nav>
-</header>
     <div class="container">
         <section class="my-5">
             <h2 class="text-center mb-4">Koleksi Pribadi</h2>
