--- a/Hubungi-kami.html
+++ b/Hubungi-kami.html
@@ -57,9 +57,10 @@
     <br>
     <a href="index.html">Kembali ke Beranda</a>
 </div>
-<footer>
-    &copy; Aura Adisty Lesmana 2025
-</footer>
- <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.3.3/js/bootstrap.bundle.min.js"></script>
+    <footer>
+        &copy; 2025 Perpustakaan Aura
+    </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
