--- a/koleksi.html
+++ b/koleksi.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="id">
 <head>
@@ -61,7 +60,17 @@
                         </div>
                     </div>
                 </div>
-            
+             <div class="col-md-4">
+                    <div class="card">
+                        <img src="gambar/gambar buku 2.webp" class="card-img-top" alt="The Midnight Library">
+                        <div class="card-body">
+                            <h5 class="card-title">The Midnight Library</h5>
+                            <p class="card-text">Perpustakaan Tengah Malam karya Matt Haig adalah sebuah novel yang mempesona karena membawa pembaca berpetualang menjelajahi kemungkinan kehidupan-kehidupan Nora Seed di rak perpustakaan. 
+                                Buku ini berbicara tentang penyesalan, hubungan, mimpi, hewan peliharaan, persahabatan, kemungkinan yang akan terjadi, dan yang paling penting bagaimana menjalani hidup di masa sekarang dan memanfaatkannya sebaik mungkin.</p>
+                            <a href="#" class="btn-baca">Baca</a>
+                        </div>
+                    </div>
+                </div>
                 <div class="col-md-4">
                     <div class="card">
                         <img src="gambar/gambar buku 3.webp" class="card-img-top" alt="Kitchen">
@@ -82,6 +91,7 @@
     <footer>
         &copy; 2025 Perpustakaan Aura
     </footer>
- <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.3.3/js/bootstrap.bundle.min.js"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
