--- a/koleksi.html
+++ b/koleksi.html
@@ -33,21 +33,21 @@
         </div>
     </nav>
       <div class="container">
-        <section class="my-5">
-            <h2 class="text-center mb-4">Koleksi Pribadi</h2>
-            <div class="row">
-               
-                <div class="col-md-4">
-                    <div class="card">
-                        <img src="gambar/MOTS 7.jpg" class="card-img-top" alt="Map of The Soul 7: Persona, Shadow, & Ego dalam Dunia BTS">
-                        <div class="card-body">
-                            <h5 class="card-title">Map of The Soul 7: Persona, Shadow, & Ego dalam Dunia BTS</h5>
-                            <p class="card-text">Buku Map of the Soul 7: Persona, Shadow & Ego in the World of BTS ditulis oleh Murray Stein, seorang penulis buku tentang kejiwaan manusia yang berpusat pada pendekatan psikoanaisis Carl Gustav Jung. 
-                                Buku Map of the Soul 7 ini merupakan buku terakhir dari buku seri Map of the Soul. Buku ini melengkapi buku seri sebelumnya, yakni Jung’s Map of the Soul: An Introduction, dan Map of the Soul: Persona.</p>
-                            <a href="#" class="btn-baca">Baca</a>
-                        </div>
+    <section class="my-5">
+        <h2 class="text-center mb-4">Koleksi Pribadi</h2>
+        <div class="row justify-content-center">
+            <!-- Kolom pertama -->
+            <div class="col-md-4 d-flex justify-content-center">
+                <div class="card" style="width: 18rem;">
+                    <img src="gambar/MOTS 7.jpg" class="card-img-top" alt="Map of The Soul 7: Persona, Shadow, & Ego dalam Dunia BTS">
+                    <div class="card-body">
+                        <h5 class="card-title">Map of The Soul 7: Persona, Shadow, & Ego dalam Dunia BTS</h5>
+                        <p class="card-text">Buku Map of the Soul 7: Persona, Shadow & Ego in the World of BTS ditulis oleh Murray Stein, seorang penulis buku tentang kejiwaan manusia yang berpusat pada pendekatan psikoanaisis Carl Gustav Jung. 
+                            Buku Map of the Soul 7 ini merupakan buku terakhir dari buku seri Map of the Soul. Buku ini melengkapi buku seri sebelumnya, yakni Jung’s Map of the Soul: An Introduction, dan Map of the Soul: Persona.</p>
+                        <a href="#" class="btn btn-primary">Baca</a>
                     </div>
                 </div>
+            </div>
                
                 <div class="col-md-4">
                     <div class="card">
