--- a/index.html
+++ b/index.html
@@ -54,6 +54,21 @@
     </div>
     <footer>
         &copy; 2025 Perpustakaan Aura
+        <!-- Default Statcounter code for Perpustakaan Aura
+https://auraadisty.github.io/auralesmana/ -->
+<script type="text/javascript">
+var sc_project=13116289; 
+var sc_invisible=0; 
+var sc_security="cb7e7e70"; 
+var scJsHost = "https://";
+document.write("<sc"+"ript type='text/javascript' src='" + scJsHost+
+"statcounter.com/counter/counter.js'></"+"script>");
+</script>
+<noscript><div class="statcounter"><a title="Web Analytics"
+href="https://statcounter.com/" target="_blank"><img class="statcounter"
+src="https://c.statcounter.com/13116289/0/cb7e7e70/0/" alt="Web Analytics"
+referrerPolicy="no-referrer-when-downgrade"></a></div></noscript>
+<!-- End of Statcounter Code -->
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
