--- a/Tabel_Perkalian.html
+++ b/Tabel_Perkalian.html
@@ -1,1 +1,35 @@
-<a href="https://USERNAME.github.io/REPO-NAME/tabel-perkalian.php" download>Download File PHP Tabel Perkalian</a>
+<!DOCTYPE html>
+<html lang="id">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Perpustakaan Aura</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+   <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <nav class="navbar navbar-expand-lg">
+        <div class="container">
+            <a class="navbar-brand" href="index.html">PERPUSTAKAAN AURA</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a class="btn btn-custom mx-1" href="index.html">Beranda</a>
+                    </li>
+                     <li class="nav-item">
+                        <a class="btn btn-custom mx-1" href="Tentang-saya.html">Tentang Saya</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="btn btn-custom mx-1" href="Hubungi-kami.html">Hubungi Kami</a>
+                    </li>
+                     <li class="nav-item">
+                        <a class="btn btn-custom mx-1" href="koleksi.html">Koleksi</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+<p><a href="https://USERNAME.github.io/REPO-NAME/tabel-perkalian.php" download>Download File PHP Tabel Perkalian</a></p>
