--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
                      <li class="nav-item">
                         <a class="btn btn-custom mx-1" href="tabel.php">Tabel Perkalian</a>
                     </li>
+                     <li class="nav-item">
+                        <a class="btn btn-custom mx-1" href="tabel (3).php">Formulir Kunjungan</a>
+                    </li>
                 </ul>
             </div>
         </div>
