--- a/Tabel_Perkalian.html
+++ b/Tabel_Perkalian.html
@@ -2,34 +2,66 @@
 <html lang="id">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Perpustakaan Aura</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-   <link rel="stylesheet" href="style.css">
+    <title>Tabel Perkalian 10x10</title>
+    <style>
+        body {
+            background-color: #800000; /* Maroon */
+            font-family: Arial, sans-serif;
+            padding: 20px;
+            color: #fff8e1; /* Krem */
+        }
+        table {
+            border-collapse: collapse;
+            margin: auto;
+            background-color: #fff8e1; /* Krem */
+            box-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
+        }
+        th, td {
+            border: 1px solid #800000;
+            padding: 10px 15px;
+            text-align: center;
+            transition: background-color 0.3s, color 0.3s;
+        }
+        th {
+            background-color: #800000;
+            color: #fff8e1;
+        }
+        td:hover {
+            background-color: #800000;
+            color: #fff8e1;
+            cursor: pointer;
+        }
+    </style>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg">
-        <div class="container">
-            <a class="navbar-brand" href="index.html">PERPUSTAKAAN AURA</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item">
-                        <a class="btn btn-custom mx-1" href="index.html">Beranda</a>
-                    </li>
-                     <li class="nav-item">
-                        <a class="btn btn-custom mx-1" href="Tentang-saya.html">Tentang Saya</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="btn btn-custom mx-1" href="Hubungi-kami.html">Hubungi Kami</a>
-                    </li>
-                     <li class="nav-item">
-                        <a class="btn btn-custom mx-1" href="koleksi.html">Koleksi</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-<p><a href="https://USERNAME.github.io/REPO-NAME/tabel-perkalian.php" download>Download File PHP Tabel Perkalian</a></p>
+
+<h2 style="text-align: center;">Tabel Perkalian 10 x 10</h2>
+
+<table>
+    <thead>
+        <tr>
+            <th></th>
+            <?php
+            for ($i = 1; $i <= 10; $i++) {
+                echo "<th>$i</th>";
+            }
+            ?>
+        </tr>
+    </thead>
+    <tbody>
+        <?php
+        for ($i = 1; $i <= 10; $i++) {
+            echo "<tr>";
+            echo "<th>$i</th>"; // Kolom kepala kiri
+            for ($j = 1; $j <= 10; $j++) {
+                $hasil = $i * $j;
+                echo "<td>$hasil</td>";
+            }
+            echo "</tr>";
+        }
+        ?>
+    </tbody>
+</table>
+
+</body>
+</html>
