--- a/index.html
+++ b/index.html
@@ -5,7 +5,38 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Perpustakaan Aura</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-   <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css">
+    <style>
+       
+        .btn-custom {
+            background-color: #f8f9fa;
+            border: 1px solid #ced4da;
+            transition: 0.3s;
+        }
+        .btn-custom:hover {
+            background-color: #0d6efd;
+            color: white;
+            border-color: #0d6efd;
+        }
+
+       
+        .event-section {
+            background-color: #f1f1f1;
+            padding: 40px 0;
+            margin-top: 50px;
+        }
+        .event-card {
+            background: white;
+            border: 1px solid #dee2e6;
+            border-radius: 10px;
+            padding: 20px;
+            transition: 0.3s;
+            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+        }
+        .event-card:hover {
+            box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+        }
+    </style>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg">
@@ -19,25 +50,26 @@
                     <li class="nav-item">
                         <a class="btn btn-custom mx-1" href="index.html">Beranda</a>
                     </li>
-                     <li class="nav-item">
+                    <li class="nav-item">
                         <a class="btn btn-custom mx-1" href="Tentang-saya.html">Tentang Saya</a>
                     </li>
                     <li class="nav-item">
                         <a class="btn btn-custom mx-1" href="Hubungi-kami.html">Hubungi Kami</a>
                     </li>
-                     <li class="nav-item">
+                    <li class="nav-item">
                         <a class="btn btn-custom mx-1" href="koleksi.html">Koleksi</a>
                     </li>
-                     <li class="nav-item">
+                    <li class="nav-item">
                         <a class="btn btn-custom mx-1" href="tabel.php">Tabel Perkalian</a>
                     </li>
-                     <li class="nav-item">
+                    <li class="nav-item">
                         <a class="btn btn-custom mx-1" href="Formulir_kunjungan.php">Formulir Kunjungan</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
+
     <div class="container">
         <section>
             <h2>Selamat Datang di Perpustakaan Aura!</h2>
@@ -50,32 +82,55 @@
 
         <section>
             <h2>Kerja Sama dan Referensi</h2> 
-         <li> <a href="https://lib.ui.ac.id/" target="_blank">Perpustakaan Universitas Indonesia</a>
-        </li>
-            <li> <a href="https://library.usu.ac.id/" target="_blank">Perpustakaan Universitas Sumatera Utara</a>
-        </li>
-            <li> <a href="https://lib.unri.ac.id/" target="_blank">Perpustakaan Universitas Riau</a> 
-        </li>
+            <li><a href="https://lib.ui.ac.id/" target="_blank">Perpustakaan Universitas Indonesia</a></li>
+            <li><a href="https://library.usu.ac.id/" target="_blank">Perpustakaan Universitas Sumatera Utara</a></li>
+            <li><a href="https://lib.unri.ac.id/" target="_blank">Perpustakaan Universitas Riau</a></li>
         </section>
     </div>
+
+ <section>
+            <h2>Event Sastra Terkini</h2>
+            <ul>
+                <li>
+                    <strong>✨ Perjamuan Setahun Jokpin ✨</strong><br>
+                    Mari kita rayakan warisan puisi Joko Pinurbo, dalam sebuah perjamuan penuh kenangan, tepat setahun setelah kepergiannya.<br>
+                    📍 Gramedia Sudirman Yogyakarta<br>
+                    📅 Minggu, 27 April 2025<br>
+                    🕕 18.00 – selesai<br>
+                    <a href="https://www.gramedia.id/events/read/perjamuan-setahun-joko-pinurbo-yang-terbuat-dari-rindu-pulang-dan-angkringan" target="_blank">Baca selengkapnya</a>
+                </li>
+                <br>
+                <li>
+                    <strong>Panggung Puisi Keliling #TernyataTanpamu</strong><br>
+                    Bersama Natasha Rizky<br>
+                    📍 Gramedia Tunjungan Plaza Surabaya<br>
+                    📅 Sabtu, 26 April 2025<br>
+                    ⏰ Pukul 15.00 – 17.00 WIB<br>
+                    <a href="https://www.gramedia.id/events/read/panggung-puisi-keliling-ternyatatanpamu-bersama-natasha-rizky-surabaya" target="_blank">Baca selengkapnya</a>
+                </li>
+            </ul>
+        </section>
+    </div>
+
     <footer>
         &copy; 2025 Perpustakaan Aura
     </footer>
- <!-- Default Statcounter code for Perpustakaan Aura
-https://auraadisty.github.io/auralesmana/ -->
-<script type="text/javascript">
-var sc_project=13116289; 
-var sc_invisible=0; 
-var sc_security="cb7e7e70"; 
-var scJsHost = "https://";
-document.write("<sc"+"ript type='text/javascript' src='" + scJsHost+
-"statcounter.com/counter/counter.js'></"+"script>");
-</script>
-<noscript><div class="statcounter"><a title="hit counter"
-href="https://statcounter.com/" target="_blank"><img class="statcounter"
-src="https://c.statcounter.com/13116289/0/cb7e7e70/0/" alt="hit counter"
-referrerPolicy="no-referrer-when-downgrade"></a></div></noscript>
-<!-- End of Statcounter Code -->
+
+    <!-- Default Statcounter code for Perpustakaan Aura -->
+    <script type="text/javascript">
+    var sc_project=13116289; 
+    var sc_invisible=0; 
+    var sc_security="cb7e7e70"; 
+    var scJsHost = "https://";
+    document.write("<sc"+"ript type='text/javascript' src='" + scJsHost+
+    "statcounter.com/counter/counter.js'></"+"script>");
+    </script>
+    <noscript><div class="statcounter"><a title="hit counter"
+    href="https://statcounter.com/" target="_blank"><img class="statcounter"
+    src="https://c.statcounter.com/13116289/0/cb7e7e70/0/" alt="hit counter"
+    referrerPolicy="no-referrer-when-downgrade"></a></div></noscript>
+    <!-- End of Statcounter Code -->
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
