--- a/index.html
+++ b/index.html
@@ -4,39 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Perpustakaan Aura</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
-    <style>
-       
-        .btn-custom {
-            background-color: #f8f9fa;
-            border: 1px solid #ced4da;
-            transition: 0.3s;
-        }
-        .btn-custom:hover {
-            background-color: #0d6efd;
-            color: white;
-            border-color: #0d6efd;
-        }
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
-       
-        .event-section {
-            background-color: #f1f1f1;
-            padding: 40px 0;
-            margin-top: 50px;
-        }
-        .event-card {
-            background: white;
-            border: 1px solid #dee2e6;
-            border-radius: 10px;
-            padding: 20px;
-            transition: 0.3s;
-            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-        }
-        .event-card:hover {
-            box-shadow: 0 4px 10px rgba(0,0,0,0.2);
-        }
-    </style>
+<style>
+  nav a:hover {
+    color: maroon;
+  }
+
+  .event-card {
+    width: 18rem;
+    margin: 10px;
+  }
+</style>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg">
