--- a/index.html
+++ b/index.html
@@ -4,10 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Perpustakaan Aura</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+    <style>
+       
+        .btn-custom {
+            background-color: #f8f9fa;
+            border: 1px solid #ced4da;
+            transition: 0.3s;
+        }
+        .btn-custom:hover {
+            background-color: #0d6efd;
+            color: white;
+            border-color: #0d6efd;
+        }
 
-<style>
   nav a:hover {
     color: maroon;
   }
@@ -16,7 +27,7 @@
     width: 18rem;
     margin: 10px;
   }
-</style>
+    </style>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg">
