--- a/index.html
+++ b/index.html
@@ -7,27 +7,68 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <style>
-       
-        .btn-custom {
-            background-color: #f8f9fa;
-            border: 1px solid #ced4da;
-            transition: 0.3s;
-        }
-        .btn-custom:hover {
-            background-color: #0d6efd;
-            color: white;
-            border-color: #0d6efd;
-        }
+nav ul li a {
+    color: #800000;
+    text-decoration: none;
+    padding: 10px 20px;
+    display: inline-block;
+    transition: background-color 0.3s, color 0.3s;
+}
 
-  nav a:hover {
-    color: maroon;
-  }
+nav ul li a:hover {
+    background-color: #800000;
+    color: #FFF5E1;
+    border-radius: 5px;
+}
 
-  .event-card {
-    width: 18rem;
-    margin: 10px;
-  }
-    </style>
+/* Container Event */
+.event-container {
+    display: flex;
+    overflow-x: auto;
+    gap: 20px;
+    padding: 20px;
+    background-color: #FFF5E1;
+}
+
+.event-card {
+    flex: 0 0 auto;
+    width: 300px;
+    background-color: #FFF5E1;
+    border: 1px solid #800000;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(128, 0, 0, 0.2);
+    padding: 20px;
+    transition: transform 0.3s;
+}
+
+.event-card:hover {
+    transform: translateY(-5px);
+}
+
+.event-card h3 {
+    color: #800000;
+    margin-bottom: 10px;
+}
+
+.event-card p {
+    color: #4d2c2c;
+    margin-bottom: 10px;
+}
+
+.event-card a {
+    display: inline-block;
+    padding: 8px 12px;
+    background-color: #800000;
+    color: #FFF5E1;
+    text-decoration: none;
+    border-radius: 5px;
+    transition: background-color 0.3s;
+}
+
+.event-card a:hover {
+    background-color: #5a0000;
+}
+</style>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg">
