--- a/Tentang-saya.html
+++ b/Tentang-saya.html
@@ -28,6 +28,12 @@
                      <li class="nav-item">
                         <a class="btn btn-custom mx-1" href="koleksi.html">Koleksi</a>
                     </li>
+                      <li class="nav-item">
+                        <a class="btn btn-custom mx-1" href="tabel.php">Tabel Perkalian</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="btn btn-custom mx-1" href="Formulir_kunjungan.php">Formulir Kunjungan</a>
+                    </li>
                 </ul>
             </div>
         </div>
