--- a/index.html
+++ b/index.html
@@ -6,69 +6,79 @@
     <title>Perpustakaan Aura</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <style>
-nav ul li a {
-    color: #800000;
-    text-decoration: none;
-    padding: 10px 20px;
-    display: inline-block;
-    transition: background-color 0.3s, color 0.3s;
-}
+     <style>
+    body {
+      font-family: 'Merriweather', serif;
+      margin: 0;
+      padding: 0;
+      background-color: #f5f0e6;
+      color: #5a2a27;
+    }
 
-nav ul li a:hover {
-    background-color: #800000;
-    color: #FFF5E1;
-    border-radius: 5px;
-}
+    nav {
+      background: linear-gradient(90deg, #5a2a27, #7b3b3b);
+      padding: 10px 20px;
+      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+      display: flex;
+      justify-content: space-around;
+      border-bottom: 2px solid #f5f0e6;
+    }
 
-/* Container Event */
-.event-container {
-    display: flex;
-    overflow-x: auto;
-    gap: 20px;
-    padding: 20px;
-    background-color: #FFF5E1;
-}
+    nav a {
+      color: #f5f0e6;
+      text-decoration: none;
+      font-size: 18px;
+      position: relative;
+      padding: 8px 12px;
+    }
 
-.event-card {
-    flex: 0 0 auto;
-    width: 300px;
-    background-color: #FFF5E1;
-    border: 1px solid #800000;
-    border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(128, 0, 0, 0.2);
-    padding: 20px;
-    transition: transform 0.3s;
-}
+    nav a::after {
+      content: '';
+      position: absolute;
+      width: 0;
+      height: 2px;
+      display: block;
+      margin-top: 5px;
+      right: 0;
+      background: #f5f0e6;
+      transition: width 0.3s ease;
+      transform: rotate(0.5deg);
+    }
 
-.event-card:hover {
-    transform: translateY(-5px);
-}
+    nav a:hover::after {
+      width: 100%;
+      left: 0;
+      background: #f5f0e6;
+    }
 
-.event-card h3 {
-    color: #800000;
-    margin-bottom: 10px;
-}
+    .event-container {
+      display: flex;
+      overflow-x: auto;
+      padding: 20px;
+      gap: 20px;
+    }
 
-.event-card p {
-    color: #4d2c2c;
-    margin-bottom: 10px;
-}
+    .event {
+      background-color: #ffffff;
+      border: 1px solid #d3c0b0;
+      border-radius: 10px;
+      padding: 20px;
+      width: 300px;
+      flex-shrink: 0;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+      transition: transform 0.3s;
+    }
 
-.event-card a {
-    display: inline-block;
-    padding: 8px 12px;
-    background-color: #800000;
-    color: #FFF5E1;
-    text-decoration: none;
-    border-radius: 5px;
-    transition: background-color 0.3s;
-}
+    .event:hover {
+      transform: scale(1.05);
+    }
 
-.event-card a:hover {
-    background-color: #5a0000;
-}
-</style>
+    .event a {
+      color: #5a2a27;
+      text-decoration: none;
+      font-weight: bold;
+    }
+  </style>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg">
