--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
 
         .event-container {
             display: flex;
-            overflow-x: auto;
-            padding: 20px;
+            flex-wrap: wrap;
             gap: 20px;
+            margin-top: 20px;
         }
 
         .event {
@@ -51,19 +51,22 @@
             border-radius: 10px;
             padding: 20px;
             width: 300px;
-            flex-shrink: 0;
             box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-            transition: transform 0.3s;
         }
 
-        .event:hover {
-            transform: scale(1.05);
+        .event h3 {
+            margin-bottom: 10px;
+            color: #5a2a27;
         }
 
         .event a {
             color: #5a2a27;
             text-decoration: none;
             font-weight: bold;
+        }
+
+        .event a:hover {
+            text-decoration: underline;
         }
     </style>
 </head>
