--- a/index.html
+++ b/index.html
@@ -38,22 +38,20 @@
             margin-right: 8px;
         }
 
-        .event-container {
-            display: flex;
-            flex-wrap: wrap;
-            gap: 20px;
-            margin-top: 20px;
-        }
+       <style>
 
-        .event {
-            background-color: #ffffff;
-            border: 1px solid #d3c0b0;
-            border-radius: 10px;
-            padding: 20px;
-            width: 300px;
-            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-        }
+  nav a:hover {
+    color: maroon;
+  }
 
+.event-container {
+      display: flex;
+      overflow-x: auto;
+}
+  .event-card {
+    width: 18rem;
+    margin: 10px;
+  }
         .event h3 {
             margin-bottom: 10px;
             color: #5a2a27;
@@ -65,9 +63,7 @@
             font-weight: bold;
         }
 
-        .event a:hover {
-            text-decoration: underline;
-        }
+       
     </style>
 </head>
 <body>
