--- a/index.html
+++ b/index.html
@@ -6,65 +6,79 @@
     <title>Perpustakaan Aura</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-      <style>
-        nav a {
-            color: #f5f0e6; /* Krem */
-            text-decoration: none;
-            font-size: 18px;
-            position: relative;
-            padding: 8px 12px;
-            display: flex;
-            align-items: center;
-        }
+  <style>
+    body {
+      font-family: 'Merriweather', serif;
+      margin: 0;
+      padding: 0;
+      background-color: #f5f0e6;
+      color: #5a2a27;
+    }
 
-        nav a::after {
-            content: '';
-            position: absolute;
-            width: 0;
-            height: 2px;
-            display: block;
-            margin-top: 5px;
-            right: 0;
-            background: #f5f0e6;
-            transition: width 0.3s ease;
-        }
+    nav {
+      background: linear-gradient(90deg, #5a2a27, #7b3b3b);
+      padding: 10px 20px;
+      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+      display: flex;
+      justify-content: space-around;
+      border-bottom: 2px solid #f5f0e6;
+    }
 
-        nav a:hover::after {
-            width: 100%;
-            left: 0;
-        }
+    nav a {
+      color: #f5f0e6;
+      text-decoration: none;
+      font-size: 18px;
+      position: relative;
+      padding: 8px 12px;
+    }
 
-        nav a i {
-            margin-right: 8px;
-        }
+    nav a::after {
+      content: '';
+      position: absolute;
+      width: 0;
+      height: 2px;
+      display: block;
+      margin-top: 5px;
+      right: 0;
+      background: #f5f0e6;
+      transition: width 0.3s ease;
+      transform: rotate(0.5deg);
+    }
 
-       <style>
+    nav a:hover::after {
+      width: 100%;
+      left: 0;
+      background: #f5f0e6;
+    }
 
-  nav a:hover {
-    color: maroon;
-  }
-
-.event-container {
+    .event-container {
       display: flex;
       overflow-x: auto;
-}
-  .event-card {
-    width: 18rem;
-    margin: 10px;
-  }
-        .event h3 {
-            margin-bottom: 10px;
-            color: #5a2a27;
-        }
+      padding: 20px;
+      gap: 20px;
+    }
 
-        .event a {
-            color: #5a2a27;
-            text-decoration: none;
-            font-weight: bold;
-        }
+    .event {
+      background-color: #ffffff;
+      border: 1px solid #d3c0b0;
+      border-radius: 10px;
+      padding: 20px;
+      width: 300px;
+      flex-shrink: 0;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+      transition: transform 0.3s;
+    }
 
-       
-    </style>
+    .event:hover {
+      transform: scale(1.05);
+    }
+
+    .event a {
+      color: #5a2a27;
+      text-decoration: none;
+      font-weight: bold;
+    }
+  </style>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg">
